tests/negative/control_flow/throw_requires_error.tx
// EXPECTED: COMPILE_ERROR
// Description: Verify that user throw statements require Error or a subclass.

function main() {
    throw "boom";
}
